force-app/main/default/objects/Review_Archive__c/Review_Archive__c.object-meta.xml
<CustomObject>
    <description>Stores archived reviews for compliance retention.</description>
    <label>Review Archive</label>
    <pluralLabel>Review Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>