force-app/main/default/objects/Review_Archive__c/fields/Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>Archive_Date__c</fullName>
    <description>Date when review was archived.</description>
    <label>Archive Date</label>
    <type>Date</type>
</CustomField>