force-app/main/default/objects/Review_Archive__c/fields/Archived_Body__c.field-meta.xml
<CustomField>
    <fullName>Archived_Body__c</fullName>
    <description>Archived review content.</description>
    <label>Archived Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>