force-app/main/default/objects/Review_Archive__c/fields/Original_Review__c.field-meta.xml
<CustomField>
    <fullName>Original_Review__c</fullName>
    <description>Reference to the original review.</description>
    <label>Original Review</label>
    <referenceTo>Property_Review__c</referenceTo>
    <relationshipLabel>Archives</relationshipLabel>
    <relationshipName>Archives</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>