force-app/main/default/objects/Review_Archive__c/fields/Retention_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Retention_End_Date__c</fullName>
    <description>Date when review can be deleted.</description>
    <label>Retention End Date</label>
    <type>Date</type>
</CustomField>