force-app/main/default/objects/Review_Archive__c/fields/Search_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Search_Tokens__c</fullName>
    <description>Tokenized searchable text.</description>
    <label>Search Tokens</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>